Platform "web" error maybe is im in the right way

--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "babel src/ -d lib/",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -t -d dist",
+    "predeploy": "expo export -p web"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
