--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  "homepage": "https://AlessandroArbasino.github.io",
+  "homepage": "https://alessandroarbasino.github.io/",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
