--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.1",
     "@types/react": "~18.2.14",
+    "@types/react-dom": "^18.2.22",
     "gh-pages": "^6.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
