--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-social-icons": "^6.15.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
