--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-player": "^2.15.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-social-icons": "^6.15.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.1",
     "@types/react": "~18.2.14",
-    "@types/react-dom": "^18.2.22",
+    "@types/react-dom": "~18.0.10",
     "gh-pages": "^6.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
